[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Pickup.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/ShotgunPickup.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Objects/guns.png" type="Texture" id=3]
[ext_resource path="res://Sounds/shotgun_pickup.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 55.4221

[node name="ShotgunPickup" instance=ExtResource( 1 )]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 1 )

[node name="Sprite" parent="." index="1"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1136, 32, 112, 144 )

[node name="PickupSound" type="AudioStreamPlayer" parent="." index="2"]
stream = ExtResource( 4 )
volume_db = -2.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="finished" from="PickupSound" to="." method="_on_PickupSound_finished"]
